--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="hero__photo" aria-label="Espace photo professionnelle">
-          <span>Ajoutez ici votre photo pro</span>
+          <span> photo pro</span>
         </div>
       </div>
     </section>
