--- a/projects.html
+++ b/projects.html
@@ -58,11 +58,11 @@
       </article>
       <article class="card">
         <div class="card__media" aria-label="Aperçu du projet 3">
-          Visuel projet
+          <a href="https://fkbois.onrender.com"><img src="assets/img/project3.png" alt=" Aperçu du projet 3"></a>
         </div>
         <div class="card__body">
-          <div class="card__title">Mini-API d’IA</div>
-          <p>Service pour classification de texte et extraction d’entités, prêt à être intégré dans un site web.</p>
+          <div class="card__title"><a href="https://fkbois.onrender.com">Catalogue de services</a></div>
+          <p>Catalogue de service de menuserie avec demande de devis espace admin pour gerer les produits etc</p>
           <div class="card__tags">
             <span>#Python</span><span>#FastAPI</span><span>#NLP</span>
           </div>
